fix(responsive): Change upload component responsivity on mobile screens

--- a/src/app/upload/video-upload-progress/video-upload-progress.component.scss
+++ b/src/app/upload/video-upload-progress/video-upload-progress.component.scss
@@ -4,6 +4,9 @@
     video {
         border-radius: 5px;
     }
+    #upload-details {
+        width: 100%;
+    }
     #file-name {
         margin: 0px;
         text-overflow: ellipsis;
